--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.12.2
   flutter_ibm_watson: ^0.0.4
-  couchdb: ^0.7.0
   charts_flutter: ^0.10.0
   provider: ^5.0.0
   email_validator: ^2.0.1
   carousel_slider: ^3.0.0
   sqflite: ^2.0.0+3
+  splashscreen: ^1.3.5
+  
   
   
   
