--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,29 +23,31 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter        
   path_provider: ^1.1.0
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.12.2
-  flutter_ibm_watson: ^0.0.4
+  http: ^0.13.0
   charts_flutter: ^0.10.0
   provider: ^5.0.0
   email_validator: ^2.0.1
   carousel_slider: ^3.0.0
-  sqflite: ^2.0.0+3
   splashscreen: ^1.3.5
-  
-  
-  
+  image_picker:
+  intl_utils: 
+  intl:
+  google_maps_flutter:
+  geocoder: ^0.2.1
+  geolocator: ^6.2.1
   
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+    
+flutter_intl:
+  enabled: true
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
